--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
+    "history": "^4.7.2",
+    "moment": "^2.22.1",
     "react": "^16.4.0",
+    "react-datetime": "^2.14.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "voucher-code-generator": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
