--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-generator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://codegenerator.app/",
+  "homepage": "https://mervynrwtw.github.io/code-generator/",
   "dependencies": {
     "@material-ui/core": "^1.0.0",
     "gh-pages": "^1.2.0",
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   }
 }
