--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-generator",
+  "name": "CodeGenerator",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://mervynrwtw.github.io/code-generator/",
